# Final-Year-Project-swarm-drone-pollination

./: .gitignore  .~lock.Project Description.odt#  Project Description.odt  README (1).md  README.md  fix_camera.sh  generate_field.py  launch_integration.sh  launch_stage14.sh  launch_swarm_full.sh  stage14_swarm_install.sh  stage14_visual_servoing_install.sh  stage5_dataset_prep.py
daas/: app.py  mission_state.py
docs/: .~lock.Project Description.odt#  FYP_Report_Week6.docx  FYP_Report_Week7_Updated.docx  Project Description.odt  Stage 1 error corrections .txt  stage 3 error fixes.txt
fyp_training/: mission_log_20260420_123418.csv  mission_log_20260420_123841.csv  mission_log_20260420_125112.csv  mission_log_20260420_132708.csv  mission_log_20260420_144116.csv  mission_log_20260420_145245.csv  mission_log_20260420_151314.csv  mission_log_20260420_154027.csv  mission_log_20260420_154237.csv  (+10 more)
ros2_ws/src/precision_pollination/: package.xml  setup.cfg  setup.py
ros2_ws/src/precision_pollination/precision_pollination/: battery_manager.py  camera_bridge.py  drone_failure_simulator.py  field_health_mapper.py  field_survey.py  flower_detector_sim.py  flower_positions.py  flower_readiness_filter.py  gz_drone_controller.py  gz_pose_bridge.py  html_reporter.py  kpi_logger.py  lawnmower_sweep.py  mission_logger.py  offboard_mission_controller.py  persistent_pollination_manager.py  pollination_controller.py  position_estimator.py  readiness_logger.py  shared_visited_list.py  swarm_coordinator.py  swarm_drone_controller.py  swarm_monitor.py  tsp_planner.py  yolov8_detector.py
(+249 files in other folders)
