<?xml version="1.0"?>
<package format="3">
  <name>precision_pollination</name>
  <version>14.0.0</version>
  <description>Stage 14 — 3-drone visual-servoing pollination demo (PX4 + Gazebo + ROS 2)</description>
  <maintainer email="lujain@um.edu.my">Lujain Alhumaidah</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
